Finish reorganization and adding
· Reorganizing the main menu - push down some items to sub menus.
· Include _3x07_DynamicMemoryAllocation into main menu.
· Adding details on enumerations
· Adding details for string manipulations
· Adding more details to header files page

--- a/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj
+++ b/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj
@@ -74,6 +74,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="..\Changes to 1x01 C Fundamentals.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -88,8 +89,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="z_0x0D_DynamicMemoryAllocation.cpp" />
-    <ClCompile Include="z_0x0E_StringManipulations.cpp" />
+    <ClCompile Include="_3x07_DynamicMemoryAllocation.cpp" />
+    <ClCompile Include="_3x08_StringManipulations.cpp" />
     <ClCompile Include="z_0x11_DataStructures.cpp" />
     <ClCompile Include="_2x00_MainMenu.cpp" />
     <ClCompile Include="_3x00_Hello_World.cpp" />
