Single-link List
Finished code to
(1) insert a node into the list
(2) remove node from the list.

It's working.

--- a/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
+++ b/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClCompile Include="_4x00_SingleLinkedList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="_3x0A_IOTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
