--- a/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj
+++ b/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="_3x04_Operators.cpp" />
     <ClCompile Include="_3x05_CharMapping.cpp" />
     <ClCompile Include="_3x06_DataTypes.cpp" />
+    <ClCompile Include="_3x0A_IOTests.cpp" />
     <ClCompile Include="_4x00_SingleLinkedList.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
