Single Linked List
1. Fix flaw since free() not called to de-allocate memory.
2. Add code to create a SLL that uses a char as value instead of int.
It's a proof of concept.

--- a/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
+++ b/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
@@ -72,10 +72,16 @@
     <ClCompile Include="_3x09_DataStructures.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="_4x00_SingleLinkedList.cpp">
+    <ClCompile Include="_3x0A_IOTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="_3x0A_IOTests.cpp">
+    <ClCompile Include="_4x00_LinkedLists.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="_4x01_SingleLinkedListOfInts.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="_4x02_SingleLinkedListOfChar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
