--- a/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj
+++ b/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj
@@ -101,7 +101,9 @@
     <ClCompile Include="_3x05_CharMapping.cpp" />
     <ClCompile Include="_3x06_DataTypes.cpp" />
     <ClCompile Include="_3x0A_IOTests.cpp" />
-    <ClCompile Include="_4x00_SingleLinkedList.cpp" />
+    <ClCompile Include="_4x00_LinkedLists.cpp" />
+    <ClCompile Include="_4x01_SingleLinkedListOfInts.cpp" />
+    <ClCompile Include="_4x02_SingleLinkedListOfChar.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
