User-defined Functions
1. Creating library for general-use function I've written. Testing and
develeoping them.
2. General housekeeping - readable code is the key.
3. Continued on SLL for char array. Something is not right b/c the
Listhead is null when it shouldn't be.

--- a/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
+++ b/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
@@ -87,5 +87,8 @@
     <ClCompile Include="_4x03_SingleLinkedListOfChars.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="_3X0B_User_Defined_Functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
