--- a/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
+++ b/1x01 C Fundamentals/1x01 C Fundamentals.vcxproj.filters
@@ -91,4 +91,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
 </Project>
